--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.SplashActivity"
             tools:ignore="WrongManifestParent">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,53 +27,56 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
-            android:name="com.example.jack.view.activity.customView.customActivity.CustomViewActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden|adjustResize"
-            tools:ignore="WrongManifestParent" />
-        <activity
-            android:name="com.example.jack.view.DogMainActivity"
+            android:name=".activity.customView.customActivity.CustomViewActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustResize"
             tools:ignore="WrongManifestParent" />
 
         <activity
-            android:name="com.example.jack.view.activity.UseRecyclerview.RecycleHome"
+            android:name=".DogMainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustResize"
             tools:ignore="WrongManifestParent" />
 
         <activity
-            android:name="com.example.jack.view.activity.SpannableStringBuilderTest"
+            android:name=".activity.UseRecyclerview.RecycleHome"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustResize"
             tools:ignore="WrongManifestParent" />
 
         <activity
-            android:name="com.example.jack.view.activity.customView.customActivity.XFlowLayoutActvity"
+            android:name=".activity.SpannableStringBuilderTest"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustResize"
             tools:ignore="WrongManifestParent" />
 
         <activity
-            android:name="com.example.jack.view.activity.SplashActivity"
+            android:name=".activity.customView.customActivity.XFlowLayoutActvity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustResize"
             tools:ignore="WrongManifestParent" />
 
         <activity
-            android:name="com.example.jack.view.activity.WelcomeGuideActivity"
+            android:name=".MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustResize"
             tools:ignore="WrongManifestParent" />
+
+        <activity
+            android:name=".activity.GuiderActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden|adjustResize"
+            tools:ignore="WrongManifestParent" />
+
 
     </application>
 
